[workspace]
resolver = "2"
members = ["class_list", "class_list_macro"]

[workspace.package]
version = "0.1.5"

[workspace.dependencies]
class_list = { path = "class_list", version = "0.1.5" }
class_list_macro = { path = "class_list_macro", version = "0.1.5" }

proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = "2.0.15"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
